--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -1,113 +1,282 @@
 /* FOR base.html */
-#header {
-    height: 85px;
-    background: #164168;
+body {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 4rem 1fr;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    grid-column: 1 / 3;
+    border-bottom: 0.05rem solid var(--light-gray);
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-#sims-header{
-    font-family: 'Arial';
+#title {
+    font-size: 2rem;
     font-weight: 800;
-    font-size: 55px;
-    line-height: 77px;
-    margin-left: 20px;
-
-    color: #FFFFFF;
-
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 0;
 }
 
-#profile{
-    height: 50px;
+#title span {
+    font: inherit;
+    color: var(--dark-blue);
+}
+
+#profile {
     text-align: right;
 }
 
-.info{
-    font-family: 'Arial';
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: right;
-
-    color: #FFFFFF;
-    margin: 0px;
+#profile p {
+    margin: 0;
 }
 
-#content{
-    display:flex;
-    height: 1000px;
+#profile-name {
+    font-weight: bold;
 }
 
-#nav {
-    width: 15%;
-    background: rgba(217, 217, 217, 0.2);
+#profile-role {
+    font-variation-settings: 'slnt' -10;
+    font-size: 80%;
 }
 
-.link{
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+#sidebar {
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-right: 0.05rem solid var(--light-gray);
+}
+
+nav {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+
+nav .link {
+    padding: 0.5rem 0.5rem;
+    text-decoration: none;
+    border-radius: 0.5rem;
+    background: none;
+    transition: background 0.1s;
+}
+
+nav .link.logout {
+    color: var(--red);
+    font-weight: bold;
+}
+
+nav .link:hover, nav .link:focus, nav .link.active {
+    background: var(--light-gray);
+}
+
+nav .link:focus {
+    outline: 0.05rem solid var(--black);
+}
+
+nav .link.active {
+    font-weight: bold;
+}
+
+nav .link.logout:hover, nav .link.logout:focus {
+    background: var(--light-red);
+}
+
+nav .link.logout:focus {
+    outline: 0.05rem solid var(--red);
+}
+
+footer p {
+    font-size: 75%;
+    font-variation-settings: 'slnt' -10;
     text-align: center;
-
-    color: #000000;
+    margin: 0;
 }
 
-#footer{
-    height:100px;
-    background: #164168;
+main {
+    height: 100%;
+    width: 100%;
+    padding: 1.5rem;
+    overflow: none;
+}
+
+main h1 {
+    margin: 0;
+}
+
+#content-top {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#search-form {
+    width: min(100%, 15rem);
+    margin: 1.5rem 0rem;
+    display: flex;
+    gap: 1rem;
+}
+
+#search-box {
+    width: max(25rem, 100%);
+}
+
+#search-btn {
+    width: -moz-fit-content;
+    width: fit-content;
+} 
+
+#table-wrapper {
+    width: 100%;
+    padding: 1rem;
+    background: var(--white);
+    box-shadow: 0rem 0.25rem 0.5rem var(--shadow);
+    border-radius: 1rem;
+}
+
+table {
+    width: 100%;
+    font: inherit;
+    border-collapse: collapse;
+}
+
+td, th {
+    padding: 0.35rem;
+}
+
+td {
+    height: 100%;
+}
+
+:not(#del-form):not(#req-form) td:not(:nth-child(3)),
+#del-form td:not(:nth-child(4)),
+#req-form td:not(:nth-child(4)),
+#transactions td {
     text-align: center;
 }
 
-.footer-notes{
-    font-family: 'Arial';
-    font-weight: 100;
-    margin:auto; 
-    color:white; 
+:not(#del-form):not(#req-form) td:nth-child(1), :not(#del-form) td:nth-child(6),
+#del-form td:nth-child(2), #del-form td:nth-child(7),
+#req-form td:nth-child(2), #req-form td:nth-child(7),
+#transactions td:nth-child(2) {
+    font-variant-numeric: tabular-nums;
 }
 
-/* FOR OTHER HTML FILES */
-
-#main{
-    flex-grow: 1;
-    background: #FFFFFF;
+tr:not(thead tr) td {
+    transition: background 0.1s;
 }
 
-.main-header{
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 44px;
-    line-height: 53px;
-    margin-left: 40px;
-
-    color: #000000;
+tr:not(thead tr) td:first-child {
+    border-radius: 0.5rem 0rem 0rem 0.5rem;
 }
 
-#search_button{
-    background: #EDEFF2;
-    border: 1px solid #000000;
-    border-radius: 12px;
-    zoom: 2;
-    padding: 5px;
-    margin-left: 20px;
+tr:not(thead tr) td:last-child {
+    border-radius: 0rem 0.5rem 0.5rem 0rem;
 }
 
-#add_button{
-    background: rgba(87, 218, 92, 0.66);
-    border: 1px solid #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    height: 50px;
-    width: 100px;
+tr:not(thead tr):hover td {
+    background: var(--light-gray);
 }
 
-#delete_button{
-    background: rgba(253, 135, 135, 0.9);
-    border: 1px solid #000000;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    height: 50px;
-    width: 100px;
+#table-loading {
+    font-variation-settings: 'slnt' -10;
+    display: none;
+}
+
+#table-empty {
+    font-weight: bold;
+    display: none;
+}
+
+#table-empty td {
+    color: var(--red);
+}
+
+#table-loading.show, #table-empty.show {
+    display: table-row;
+}
+
+#add-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#add-form span {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+#add-form span label {
+    min-width: 10rem;
+}
+
+#add-form #life {
+    width: calc(max(30%, 15rem) - 11rem);
+}
+
+#add-form #quantifier {
+    width: 10rem;
+}
+
+#add-form select {
+    border: none;
+}
+
+#add-form input.hide {
+    display: none;
+}
+
+#add-form select:active {
+    outline: 0.05rem solid var(--black);
+}
+
+#add-form input[type=text], #add-form input[type=number] {
+    width: 100%;
+    text-align: center;
+}
+
+#add-form textarea {
+    width: 100%;
+}
+
+#add-form tr td:nth-child(4) {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+#add-form #add-row {
+    margin-top: 1rem;
+}
+
+#add-form .del-row {
+    background: var(--red);
+    color: white;
+    font-weight: bold;
+}
+
+#add-form .del-row:hover, #add-form .del-row:focus {
+    background: var(--dark-red);
+}
+
+#del-form input[type=submit], #req-form input[type=submit] {
+    margin-top: 1rem;
+}
+
+#req-form input[type=number] {
+    text-align: center;
 }
