--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -4,62 +4,123 @@
 <!-- session['user'] = (role_id, username, password, firstName, lastName, role_name) of the CURRENT user -->
 <!-- items is the list of items -->
 
-<div id="main">
-    <p class="main-header">Inventory</p>
-
-    <!-- Search button -->
-    <form method="get" action="{{ url_for('search') }}">
-        <input type="search" id="search_button" placeholder="Search item..." name="keyword">
-    </form>
-
+<div id="content-top">
+    <h1 class="main-header">Inventory</h1>
+    
     <!-- User is custodian -->
     {% if (session['user'])[0] == 1 %}
         <!-- Add item button -->
-        <a href="{{ url_for('add_item') }}">
-            <button id="add_button"><span id="login_text">Add item</span></button>
+        <a class="btn" href="{{ url_for('add_item') }}">
+            Add item
         </a>
 
         <!-- Delete item button -->
-        <a href="{{ url_for('delete_form') }}">
-            <button id="delete_button"><span id="login_text">Delete item</span></button>
+        <a class="btn" href="{{ url_for('delete_form') }}">
+            Delete item
         </a>
     <!-- User is personnel -->
     {% else %}
         <!-- Request item button -->
-        <a href="{{ url_for('request_form') }}">
-            <button id="add_button"><span id="login_text">Request item</span></button>
+        <a class="btn" href="{{ url_for('request_form') }}">
+            Request item
         </a>
     {% endif %}
+</div>
 
-    {% if items|length == 0 %}
-        <p>There are no items in the inventory.</p>
-    {% else %}
+<form id="search-form">
+    <input type="search" id="search-box" placeholder="Search item&hellip;" name="keyword">
+    <input type="submit" id="search-btn" value="Search" name="search-btn">
+</form>
+
+{% if items|length == 0 %}
+    <p>There are no items in the inventory.</p>
+{% else %}
+    <div id="table-wrapper">
         <table>
             <!-- Generate header for table -->
-            <tr>
-                <th>Code</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Shell Life (in hours)</th>
-                <th>Unit</th>
-                <th>Unit Price</th>
-                <th>Available Quantity</th>
+            <thead>
+                <tr>
+                    <th width="5%">Code</th>
+                    <th width="15%">Name</th>
+                    <th width="30%">Description</th>
+                    <th width="15%">Shelf Life<br><span style="font-weight: initial; font-variation-settings: 'slnt' -10; font-size: 80%;">(in hours)</span></th>
+                    <th width="5%">Unit</th>
+                    <th width="15%">Unit Price</th>
+                    <th width="10%">Available Quantity</th>
+                </tr>
+            </thead>
+
+            <tr id="table-loading">
+                <td colspan="7">Please wait&hellip;</td>
+            </tr>
+
+            <tr id="table-empty">
+                <td colspan="7">No items found.</td>
             </tr>
 
             <!-- Generate each row -->
             {% for a in items %}
             <tr>
-                <th>{{ a[0] }}</th>
-                <th>{{ a[1] }}</th>
-                <th>{{ a[2] }}</th>
-                <th>{{ a[3] }}</th>
-                <th>{{ a[4] }}</th>
-                <th>{{ a[5] }}</th>
-                <th>{{ a[6] }}</th>
+                <td>{{ a[0] }}</td>
+                <td>{{ a[1] }}</td>
+                <td>{{ a[2] }}</td>
+                <td>{{ a[3] }}</td>
+                <td>{{ a[4] }}</td>
+                <td>{{ a[5] }}</td>
+                <td>{{ a[6] }}</td>
             </tr>
             {% endfor %}
         </table>
-    {% endif %}
-</div>
+    </div>
+{% endif %}
+
+<script>
+    const searchForm = document.querySelector("#search-form");
+    const searchBox = document.querySelector("#search-box");
+
+    async function getItems (keyword) {
+        document.querySelector("#table-wrapper");
+
+        return fetch("{{ url_for('search') }}" + "?keyword=" + keyword)
+        .then(d => d.json());
+    }
+
+    function populateTable (items) {
+        const tbody = document.querySelector("tbody");
+
+        for (let x of items) {
+            const tr = document.createElement("tr");
+            
+            for (let y of x) {
+                const td = document.createElement("td");
+                td.innerHTML = y;
+                tr.appendChild(td);
+            }
+
+            tbody.appendChild(tr);
+        }
+    }
+
+    async function search (keyword) {
+        const tbody = document.querySelector("tbody");
+        const loading = document.querySelector("#table-loading");
+        const empty = document.querySelector("#table-empty");
+
+        while (tbody.children.length > 2) tbody.removeChild(tbody.lastChild);
+        empty.classList.remove("show");
+        loading.classList.add("show");
+
+        let items = await getItems(keyword);
+        populateTable(items);
+
+        loading.classList.remove("show");
+        if (items.length === 0) empty.classList.add("show");
+    }
+
+    searchForm.addEventListener("submit", e => {
+        e.preventDefault();
+        search(searchBox.value);
+    });
+</script>
 
 {% endblock %}
