--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,23 +1,34 @@
 <html>
     <head>
         <title>sIMS</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='style_login.css') }}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10,400;-10,700;0,400;0,700;0,800&display=swap" rel="stylesheet">
     </head>
 
-    <body>
-        <p id="title">sIMS</p>
-        <p id="description">simple inventory management system</p>
+    <body id="login-body">
+        <main id="login-main">
+            <div id="login-left">
+                <h1 id="login-title"><span>s</span>IMS</h1>
+                <p id="login-subtitle"><span>simple</span> inventory management system</p>
+            </div>
 
-        <form method="post">
-            <!-- DO NOT CHANGE THE name attribute! Code will break -->
-            <input type="text" class="field" placeholder="Username" name="uname" required><br>
-            <input type="password" class="field" placeholder="Password" name="pword" required><br>
-            <input type="submit" id="login_button" value="Log in">
-        </form>
-
-        <!-- shows whether login is successful or not -->
-        {% if msg|length != 0 %}
-            <p> {{msg}} </p>
-        {% endif %}
+            <div id="login-right">
+                <form id="login-form" method="post">
+                    <!-- DO NOT CHANGE THE name attribute! Code will break -->
+                    <input type="text" class="field" placeholder="Username" name="uname" required>
+                    <input type="password" class="field" placeholder="Password" name="pword" required>
+                    <span>
+                        <input type="submit" id="login-submit" value="Log in">
+                        <!-- shows whether login is successful or not -->
+                        {% if msg|length != 0 %}
+                            <span id="login-error"> {{ msg }} </span>
+                        {% endif %}
+                    </span>
+                </form>
+            </div>
+        </main>
     </body>
 </html>
