--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,30 +1,42 @@
 :root {
     font-size: 1rem;
-    --font: "Inter", sans-serif;
+    --font: "IBM Plex Sans", sans-serif;
+
     --black: hsl(255, 15%, 15%);
     --shadow: hsla(255, 15%, 15%, 5%);
     --btn-shadow: hsla(255, 15%, 15%, 10%);
+
     --light-gray: hsl(255, 10%, 92%);
+    --light-gray-2: hsl(255, 10%, 95%);
     --gray: hsl(255, 10%, 75%);
+
     --white: hsl(255, 10%, 99%);
+
     --light-blue: hsl(220, 80%, 95%);
     --blue: hsl(220, 100%, 65%);
     --dark-blue: hsl(220, 75%, 45%);
+    --blue-shadow: hsla(220, 100%, 65%, 30%);
+
     --red: hsl(345, 100%, 65%);
     --light-red: hsl(345, 100%, 95%);
     --light-red-2: hsl(345, 100%, 85%);
+    --light-red-3: hsl(345, 100%, 98%);
+    --light-red-4: hsl(345, 100%, 93%);
     --dark-red: hsl(345, 80%, 50%);
+    --red-shadow: hsla(345, 100%, 65%, 30%);
+
+    --translucent: hsla(255, 10%, 99%, 80%);
 }
 
 * {
-    font-family: var(--font);
-    color: var(--black);
     box-sizing: border-box;
     -webkit-user-select: none;
     user-select: none;
 }
 
 html {
+    font-family: var(--font);
+    color: var(--black);
     background: var(--white);
 }
 
@@ -33,8 +45,24 @@ body {
     align-items: center;
 }
 
+html, body {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+a {
+    color: inherit;
+}
+
 input, textarea, select, button {
     font: inherit;
+    text-align: inherit;
+}
+
+textarea {
+    resize: vertical;
 }
 
 input[type=text], input[type=password], input[type=search], input[type=number], textarea {
@@ -42,6 +70,7 @@ input[type=text], input[type=password], input[type=search], input[type=number], 
     background: none;
     border: none;
     border-bottom: 0.05rem solid var(--gray);
+    border-radius: 0;
     transition: background 0.1s, border-bottom 0.1s;
 }
 
@@ -77,24 +106,44 @@ input[type=submit], input[type=button], a.btn, select, button {
     transition: background 0.1s, box-shadow 0.1s;
 }
 
-input[type=submit] {
-    background: var(--blue);
-    color: white;
-    font-weight: bold;
-}
-
 input[type=submit]:hover, input[type=button]:hover, a.btn:hover, select:hover, button:hover {
     cursor: pointer;
 }
 
-input[type=button]:hover, a.btn:hover, select:hover, button:hover,
+input[type=button]:not(:disabled):hover, a.btn:not(:disabled):hover, select:not(:disabled):hover, button:not(:disabled):hover,
 input[type=button]:focus, a.btn:focus, select:focus, button:focus {
     background: var(--light-gray);
-    box-shadow: 0rem 0.15rem 0.3rem var(--btn-shadow);
+    box-shadow: 0rem 0.1rem 0.2rem var(--btn-shadow);
 }
 
-input[type=submit]:hover, input[type=submit]:focus {
+input[type=submit] {
+    color: white;
+    font-weight: bold;
+}
+
+input[type=submit]:not(:disabled) {
+    background: var(--blue);
+    box-shadow: 0rem 0.2rem 0.4rem var(--blue-shadow);
+}
+
+input[type=submit]:not(:disabled):hover, input[type=submit]:not(:disabled):focus {
     background: var(--dark-blue);
+    box-shadow: 0rem 0.1rem 0.2rem var(--blue-shadow);
+}
+
+input[type=submit].btn-red:not(:disabled) {
+    background: var(--red);
+    box-shadow: 0rem 0.2rem 0.4rem var(--red-shadow);
+}
+
+input[type=submit].btn-red:not(:disabled):hover, input[type=submit].btn-red:not(:disabled):focus {
+    background: var(--dark-red);
+    box-shadow: 0rem 0.1rem 0.2rem var(--red-shadow);
+}
+
+input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select:disabled, button:disabled {
+    background: var(--gray);
+    cursor: not-allowed;
 }
 
 input[type=submit]:focus, input[type=button]:focus, a.btn:focus, button:focus, select:focus,
@@ -122,5 +171,9 @@ input[type=submit]:active, input[type=button]:active, a.btn:active, button:activ
 #err-msg {
     font-size: 1.25rem;
     font-weight: bold;
-    font-variation-settings: 'slnt' -10;
+    font-style: italic;
+}
+
+main {
+    overflow: hidden;
 }
