--- a/src/static/style_login.css
+++ b/src/static/style_login.css
@@ -1,4 +1,6 @@
 #login-main {
+    height: 100%;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 100%;
@@ -14,12 +16,13 @@
 #login-title {
     margin: 0;
     font-size: 6rem;
-    font-weight: 800;
+    font-weight: 700;
     line-height: 90%;
 }
 
 #login-subtitle {
-    font-variation-settings: 'slnt' -10;
+    font-family: 'IBM Plex Sans Condensed';
+    font-style: italic;
     font-size: 1.1rem;
     margin: 0;
 }
@@ -39,6 +42,8 @@
 }
 
 #login-form {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -49,18 +54,14 @@
     display: flex;
     gap: 0.75rem;
     align-items: center;
-    margin-top: 0.25rem;
-}
-
-#login-form input[type=text], #login-form input[type=password] {
-    width: clamp(10rem, 100%, 15rem);
-}
-
-#login-submit {
     margin-top: 0.5rem;
 }
 
 #login-error {
     color: var(--red);
-    font-variation-settings: 'slnt' -10;
+    font-style: italic;
+}
+
+#login-username, #login-password {
+    width: clamp(25%, 15rem, 50%);
 }
