--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,11 +1,15 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>sIMS</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='style_inventory.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style_table.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename = 'style_inventory.css') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10,400;-10,700;0,400;0,700;0,800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+        <script src="{{ url_for('static', filename = 'script_table.js') }}"></script>
     </head>
 
     <body>
@@ -21,7 +25,7 @@
         <div id="sidebar">
             <nav>
                 <a class="link {{ 'active' if active == 'inventory' }}" href="{{ url_for('inventory') }}">Inventory</a>
-                <a class="link {{ 'active' if active == 'transactions' }}" href="{{ url_for('transactions') }}">{{ "My " if session['user'][0] == 2 }}Transactions</a>
+                <a class="link {{ 'active' if active == 'requests' }}" href="{{ url_for('requests') }}">{{ "My" if session['user'][0] == 2 else "Item"}} Requests</a>
                 <a class="link logout" href="{{ url_for('logout') }}">Log out</a>
             </nav>
             
