--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,6 +1,7 @@
 :root {
     font-size: 1rem;
-    --font: "IBM Plex Sans", sans-serif;
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 450;
 
     --black: hsl(255, 15%, 15%);
     --shadow: hsla(255, 15%, 15%, 5%);
@@ -35,7 +36,6 @@
 }
 
 html {
-    font-family: var(--font);
     color: var(--black);
     background: var(--white);
 }
