--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -1,4 +1,3 @@
-/* FOR base.html */
 body {
     display: grid;
     grid-template-columns: clamp(100px, 20vw, 250px) 1fr;
@@ -175,7 +174,7 @@ main h1 {
 }
 
 .inventory-table .mono, .request-table .mono {
-    font-family: 'IBM Plex Mono';
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .inventory-table .tabnum, .request-table .tabnum {
@@ -217,13 +216,13 @@ main h1 {
     font-weight: bold;
 }
 
-#add, #delete, #request {
+#add, #delete, #request, #update {
     display: flex;
     flex-grow: 1;
     justify-content: end;
 }
 
-#add-table .table-row {
+#add-table .table-row, #updated-items .table-row {
     grid-template-columns: 10% 15% 20% 20% 10% 10% 10% 5%;
 }
 
@@ -254,33 +253,33 @@ main h1 {
     resize: vertical;
 }
 
-#add-table .shelf-life {
+#add-table .shelf-life, #updated-items .shelf-life {
     grid-template-columns: 1fr 1.5fr;
     grid-auto-flow: column;
     gap: 0.75rem;
 }
 
-#add-table .shelf-life > * {
+#add-table .shelf-life > *, #updated-items .shelf-life > * {
     width: 100%;
 }
 
-#add-table .shelf-life > .hide {
+#add-table .shelf-life > .hide, #updated-items .shelf-life > .hide {
     display: none;
 }
 
-#add-table .shelf-life > .extend {
+#add-table .shelf-life > .extend, #updated-items .shelf-life > .extend {
     grid-column: 1 / -1;
 }
 
-#add-table .shelf-life input {
+#add-table .shelf-life input, #updated-items .shelf-life input {
     text-align: right;
 }
 
-#add-table .shelf-life select {
+#add-table .shelf-life select, #updated-items .shelf-life select {
     text-align: left;
 }
 
-#add-table .shelf-life option {
+#add-table .shelf-life option, #updated-items .shelf-life option {
     background: var(--white);
 }
 
@@ -327,6 +326,10 @@ main h1 {
 .select-row:not(:disabled):hover :last-child, .select-row:not(:disabled):focus :last-child,
 .delete-row:not(:disabled):hover :last-child, .delete-row:not(:disabled):focus :last-child {
     display: unset;
+}
+
+#updated-items .table-row > .hidden {
+    display: none;
 }
 
 .request-table .table-row {
