--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>sIMS</title>
+        <link rel="icon" href="{{ url_for('static', filename = 'favicon.png') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_table.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename = 'style_inventory.css') }}">
