--- a/src/templates/inventory.html
+++ b/src/templates/inventory.html
@@ -8,6 +8,7 @@
     {% if session['user'][0] == 1 %}
         <a class="btn" href="{{ url_for('add_items') }}">Add items</a>
         <a class="btn" href="{{ url_for('remove_items') }}">Remove items</a>
+        <a class="btn" href="{{ url_for('update_items') }}">Update items</a>
     {% else %}
         <a class="btn" href="{{ url_for('request_items') }}">Request items</a>
     {% endif %}
