--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -5,7 +5,7 @@
 <div id="content-top">
     <h1 class="main-header">Users</h1>
 
-    <a class="btn" href="{{ url_for('add_items') }}">Add users</a>
+    <a class="btn" href="{{ url_for('add_users') }}">Add users</a>
     <a class="btn" href="{{ url_for('remove_items') }}">Remove users</a>
 
     <form id="search">
