Implement deleting users

--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -6,7 +6,7 @@
     <h1 class="main-header">Users</h1>
 
     <a class="btn" href="{{ url_for('add_users') }}">Add users</a>
-    <a class="btn" href="{{ url_for('remove_items') }}">Remove users</a>
+    <a class="btn" href="{{ url_for('remove_users') }}">Remove users</a>
 
     <form id="search">
         <input type="search" id="search-box" placeholder="Search user&hellip;" name="keyword" autofocus>
