--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -21,6 +21,7 @@
                 <div>Username</div>
                 <div>First Name</div>
                 <div>Last name</div>
+                <div>Email address</div>
                 <div>Role</div>
             </div>
         </div>
