--- a/src/templates/delete_user.html
+++ b/src/templates/delete_user.html
@@ -18,6 +18,7 @@
                 <div>Username</div>
                 <div>First Name</div>
                 <div>Last Name</div>
+                <div>Email address</div>
                 <div>Role</div>
                 <div></div>
             </div>
@@ -40,6 +41,7 @@
                 <div>Username</div>
                 <div>First Name</div>
                 <div>Last Name</div>
+                <div>Email address</div>
                 <div>Role</div>
                 <div></div>
             </div>
@@ -105,7 +107,7 @@
             "headers": {
                 "Content-Type": "application/json"
             },
-            "body": JSON.stringify({ "users": Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :first-child")).map(x => x.innerHTML) })
+            "body": JSON.stringify({ "users": Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :first-child")).map(x => x.innerHTML), "emails":  Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :nth-child(4)")).map(x => x.innerHTML)})
         }).then(d => {
             if (d.status === 200) window.location = "{{ url_for('show_users') }}";
         });
