--- a/src/templates/delete_user.html
+++ b/src/templates/delete_user.html
@@ -14,7 +14,7 @@
 <div id="item-search" class="table-wrapper">
     <div class="table-main inventory-table">
         <div class="table-header">
-            <div class="table-row">
+            <div class="table-row delete-user-table">
                 <div>Username</div>
                 <div>First Name</div>
                 <div>Last Name</div>
@@ -37,7 +37,7 @@
 <div id="selected-items" class="table-wrapper">
     <div class="table-main inventory-table">
         <div class="table-header">
-            <div class="table-row">
+            <div class="table-row delete-user-table">
                 <div>Username</div>
                 <div>First Name</div>
                 <div>Last Name</div>
