--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -14,7 +14,7 @@
     </form>
 </div>
 
-<div class="table-wrapper inventory-table">
+<div class="table-wrapper inventory-table user-table">
     <div class="table-main">
         <div class="table-header">
             <div class="table-row">
@@ -35,6 +35,8 @@
         </div>
     </div>
 </div>
+
+
 
 <script>
     document.querySelector("#search").addEventListener("submit", e => {
