--- a/src/templates/add_user.html
+++ b/src/templates/add_user.html
@@ -9,7 +9,7 @@
 <div id="add-table" class="table-wrapper">
     <div class="table-main inventory-table">
         <div class="table-header">
-            <div class="table-row">
+            <div class="table-row add-user-table">
                 <div>First Name</div>
                 <div>Last Name</div>
                 <div>Email address</div>
@@ -45,6 +45,7 @@
     function addRow () {
         let row = document.createElement("div");
         row.classList.add("table-row");
+        row.classList.add("add-user-table");
 
         let roles = {
             "Custodian": 1,
