Improve layouts, fix some bugs involving roles

--- a/src/templates/add_user.html
+++ b/src/templates/add_user.html
@@ -67,6 +67,7 @@
             if(i == 2){
                 el.type = "email"
                 el.maxLength = 50;
+                el.pattern = "^\\w+([\\.-]?\w+)*@(gmail|yahoo)\\.com"
                 wrapper.appendChild(el);
                 row.appendChild(wrapper);
                 continue;
