--- a/src/templates/delete.html
+++ b/src/templates/delete.html
@@ -114,6 +114,9 @@
             "body": JSON.stringify({ "items": Array.from(document.querySelectorAll("#selected-items .table-body .table-row > :first-child")).map(x => x.innerHTML) })
         }).then(d => {
             if (d.status === 200) window.location = "{{ url_for('inventory') }}";
+            if(d.status === 403) return d.text().then((html) => {
+                document.body.innerHTML = html     
+            })
         });
     })
 </script>
