--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -239,11 +239,17 @@ main h1 {
 }
 
 .add-user-table input[type="email"]{
-    border: 1px solid var(--gray);
-    border-radius: 5px;
+    border: none;
+    border-bottom: 1px solid var(--gray);
     background: none;
     height: 100%;
-    padding: 0 0.75rem;
+    padding: 0 0.2rem;
+    margin-bottom: 5px;
+}
+
+.add-user-table input[type="email"]:focus{
+    outline: none;
+    border-bottom: 1px solid var(--blue);
 }
 
 #add-table input {
