--- a/src/templates/add.html
+++ b/src/templates/add.html
@@ -145,6 +145,9 @@
             "body": JSON.stringify({ "values": values })
         }).then(d => {
             if (d.status === 200) window.location = "{{ url_for('inventory') }}";
+            if(d.status === 403) return d.text().then((html) => {
+                document.body.innerHTML = html     
+            })
         });
 
         disableButton();
